--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,8 +21,8 @@ requires-python = ">=3.8"
 dependencies = [
     "ruamel.yaml",
     "pint_pulsar>=1.1.1",
-    "enterprise-pulsar>=3.3.2",
-    "enterprise-extensions>=v2.4.1",
+    #"enterprise-pulsar>=3.3.2",
+    #"enterprise-extensions>=v2.4.1",
     "pytest",
     "nbconvert",
     "ipywidgets>=7.6.3",
